syntax = "proto3";
package api.movie_reservation.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/harveytvt/movie-reservation-system/gen/go/api/movie_reservation/v1;movie_reservation";

service MovieReservationService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/register"
      body: "*"
    };
  }

  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }

  rpc Whoami(WhoamiRequest) returns (WhoamiResponse) {
    option (google.api.http) = {get: "/v1/whoami"};
  }

  rpc CreateMovie(CreateMovieRequest) returns (CreateMovieResponse) {
    option (google.api.http) = {
      post: "/v1/movies"
      body: "*"
    };
  }

  rpc UpdateMovie(UpdateMovieRequest) returns (UpdateMovieResponse) {
    option (google.api.http) = {
      put: "/v1/movies/{id}"
      body: "*"
    };
  }

  rpc DeleteMovie(DeleteMovieRequest) returns (DeleteMovieResponse) {
    option (google.api.http) = {delete: "/v1/movies/{id}"};
  }

  rpc ListMovies(ListMoviesRequest) returns (ListMoviesResponse) {
    option (google.api.http) = {get: "/v1/movies"};
  }

  rpc CreateGenre(CreateGenreRequest) returns (CreateGenreResponse) {
    option (google.api.http) = {
      post: "/v1/genres"
      body: "*"
    };
  }

  rpc ListGenres(ListGenresRequest) returns (ListGenresResponse) {
    option (google.api.http) = {get: "/v1/genres"};
  }

  rpc AddMovieGenre(AddMovieGenreRequest) returns (AddMovieGenreResponse) {
    option (google.api.http) = {put: "/v1/movies/{id}/genre/{genre}"};
  }

  rpc RemoveMovieGenre(RemoveMovieGenreRequest) returns (RemoveMovieGenreResponse) {
    option (google.api.http) = {delete: "/v1/movies/{id}/genre/{genre}"};
  }

  rpc ListShows(ListShowsRequest) returns (ListShowsResponse) {
    option (google.api.http) = {get: "/v1/shows"};
  }

  rpc GetShowSeats(GetShowSeatsRequest) returns (GetShowSeatsResponse) {
    option (google.api.http) = {get: "/v1/shows/{show_id}/seats"};
  }

  rpc CreateTheater(CreateTheaterRequest) returns (CreateTheaterResponse) {
    option (google.api.http) = {
      post: "/v1/theaters"
      body: "*"
    };
  }

  rpc UpdateTheater(UpdateTheaterRequest) returns (UpdateTheaterResponse) {
    option (google.api.http) = {
      put: "/v1/theaters/{id}"
      body: "*"
    };
  }

  rpc DeleteTheater(DeleteTheaterRequest) returns (DeleteTheaterResponse) {
    option (google.api.http) = {delete: "/v1/theaters/{id}"};
  }

  rpc CreateHall(CreateHallRequest) returns (CreateHallResponse) {
    option (google.api.http) = {
      post: "/v1/halls"
      body: "*"
    };
  }

  rpc UpdateHall(UpdateHallRequest) returns (UpdateHallResponse) {
    option (google.api.http) = {
      put: "/v1/halls/{id}"
      body: "*"
    };
  }

  rpc DeleteHall(DeleteHallRequest) returns (DeleteHallResponse) {
    option (google.api.http) = {delete: "/v1/halls/{id}"};
  }

  rpc CreateSeat(CreateSeatRequest) returns (CreateSeatResponse) {
    option (google.api.http) = {
      post: "/v1/seats"
      body: "*"
    };
  }

  rpc DeleteSeat(DeleteSeatRequest) returns (DeleteSeatResponse) {
    option (google.api.http) = {delete: "/v1/seats/{id}"};
  }

  rpc GetHallSeats(GetHallSeatsRequest) returns (GetHallSeatsResponse) {
    option (google.api.http) = {get: "/v1/halls/{hall_id}/seats"};
  }
}

message User {
  string username = 1;
  Role role = 2;

  enum Role {
    ROLE_UNSPECIFIED = 0;
    ROLE_USER = 1;
    ROLE_ADMIN = 2;
    ROLE_SUPER_ADMIN = 3;
  }
}

message Movie {
  string id = 1;
  string title = 2;
  string description = 3;
  uint64 duration = 4;
  string poster = 5;
  repeated string genres = 6;
}

message Theater {
  string id = 1;
  string name = 2;
  string address = 3;
}

message Hall {
  string id = 1;
  uint64 theater_id = 2;
  string name = 3;
  uint32 capacity = 4;
}

message Show {
  string id = 1;
  Theater theater = 2;
  Hall hall = 3;
  Movie movie = 4;
  google.protobuf.Timestamp started_at = 5;
}

message Seat {
  string id = 1;
  uint64 hall_id = 2;
  uint32 row = 3;
  uint32 col = 4;

  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_AVAILABLE = 1;
    STATUS_RESERVED = 2;
    STATUS_SOLD = 3;
  }
}

message Order {
  string id = 1;
  Show show = 2;
  Seat seat = 3;
  User user = 4;
  Status status = 5;

  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_PENDING = 1;
    STATUS_CONFIRMED = 2;
    STATUS_CANCELED = 3;
    STATUS_CONSUMED = 4;
    STATUS_EXPIRED = 5;
  }
}

message RegisterRequest {
  string username = 1 [(google.api.field_behavior) = REQUIRED];
  string password = 2 [(google.api.field_behavior) = REQUIRED];
}

message RegisterResponse {}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message WhoamiRequest {}

message WhoamiResponse {
  User user = 1;
}

message CreateMovieRequest {
  string title = 1 [(google.api.field_behavior) = REQUIRED];
  string description = 2 [(google.api.field_behavior) = REQUIRED];
  uint64 duration = 3 [(google.api.field_behavior) = REQUIRED];
  string poster = 4 [(google.api.field_behavior) = REQUIRED];
  repeated string genres = 8 [(google.api.field_behavior) = OPTIONAL];
}

message CreateMovieResponse {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message UpdateMovieRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
  google.protobuf.StringValue title = 2 [(google.api.field_behavior) = OPTIONAL];
  google.protobuf.StringValue description = 3 [(google.api.field_behavior) = OPTIONAL];
  google.protobuf.UInt64Value duration = 4 [(google.api.field_behavior) = OPTIONAL];
  google.protobuf.StringValue poster = 5 [(google.api.field_behavior) = OPTIONAL];
}

message UpdateMovieResponse {}

message DeleteMovieRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteMovieResponse {}

message CreateGenreRequest {
  string name = 1 [(google.api.field_behavior) = REQUIRED];
}

message CreateGenreResponse {}

message ListGenresRequest {
  uint64 offset = 1 [(google.api.field_behavior) = REQUIRED];
  uint64 limit = 2 [(google.api.field_behavior) = REQUIRED];
}
message ListGenresResponse {
  repeated string genres = 1 [(google.api.field_behavior) = REQUIRED];
  uint64 total = 2 [(google.api.field_behavior) = REQUIRED];
}

message AddMovieGenreRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
  string genre = 2 [(google.api.field_behavior) = REQUIRED];
}

message AddMovieGenreResponse {}

message RemoveMovieGenreRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
  string genre = 2 [(google.api.field_behavior) = REQUIRED];
}

message RemoveMovieGenreResponse {}

message ListMoviesRequest {
  uint64 offset = 1 [(google.api.field_behavior) = REQUIRED];
  uint64 limit = 2 [(google.api.field_behavior) = REQUIRED];

  string genre = 3 [(google.api.field_behavior) = OPTIONAL];
}

message ListMoviesResponse {
  repeated Movie movies = 1 [(google.api.field_behavior) = REQUIRED];
  uint64 total = 2 [(google.api.field_behavior) = REQUIRED];
}

message ListShowsRequest {
  string movie_id = 1 [(google.api.field_behavior) = REQUIRED];
  uint64 offset = 2 [(google.api.field_behavior) = REQUIRED];
  uint64 limit = 3 [(google.api.field_behavior) = REQUIRED];
}

message ListShowsResponse {
  repeated Show shows = 1 [(google.api.field_behavior) = REQUIRED];
  uint64 total = 2 [(google.api.field_behavior) = REQUIRED];
}

message GetShowSeatsRequest {
  string show_id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetShowSeatsResponse {
  repeated Seat seats = 1 [(google.api.field_behavior) = REQUIRED];
}

message CreateTheaterRequest {
  string name = 1 [(google.api.field_behavior) = REQUIRED];
  string description = 2 [(google.api.field_behavior) = REQUIRED];
}

message CreateTheaterResponse {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message UpdateTheaterRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
  google.protobuf.StringValue name = 2 [(google.api.field_behavior) = OPTIONAL];
  google.protobuf.StringValue description = 3 [(google.api.field_behavior) = OPTIONAL];
}

message UpdateTheaterResponse {}

message DeleteTheaterRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteTheaterResponse {}

message CreateHallRequest {
  string theater_id = 1 [(google.api.field_behavior) = REQUIRED];
  string name = 2 [(google.api.field_behavior) = REQUIRED];
}

message CreateHallResponse {}

message UpdateHallRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
  google.protobuf.StringValue name = 2 [(google.api.field_behavior) = OPTIONAL];
}

message UpdateHallResponse {}

message DeleteHallRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteHallResponse {}

message CreateSeatRequest {
  string hall_id = 1 [(google.api.field_behavior) = REQUIRED];
  uint32 row = 2 [(google.api.field_behavior) = REQUIRED];
  uint32 col = 3 [(google.api.field_behavior) = REQUIRED];
}

message CreateSeatResponse {}

message DeleteSeatRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteSeatResponse {}

message GetHallSeatsRequest {
  string hall_id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetHallSeatsResponse {
  repeated Seat seats = 1 [(google.api.field_behavior) = REQUIRED];
}

message CreateOrderRequest {
  uint64 show_id = 1 [(google.api.field_behavior) = REQUIRED];
  uint64 seat_id = 2 [(google.api.field_behavior) = REQUIRED];
}

message CreateOrderResponse {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message CancelOrderRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message CancelOrderResponse {}

message ConfirmOrderRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message ConfirmOrderResponse {}

message ListOrdersRequest {
  uint64 offset = 1 [(google.api.field_behavior) = REQUIRED];
  uint64 limit = 2 [(google.api.field_behavior) = REQUIRED];
}

message ListOrdersResponse {
  repeated Order orders = 1 [(google.api.field_behavior) = REQUIRED];
  uint64 total = 2 [(google.api.field_behavior) = REQUIRED];
}
